# photo-importer

./: package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.css  App.tsx  constants.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/OptionsForm/: OptionsForm.tsx
src/components/Slide/: Slide.module.scss  Slide.tsx
src/components/SlideList/: SlideList.module.scss  SlideList.tsx
src/components/form/Fieldset/: Fieldset.tsx
src/hooks/: useDisksQuery.tsx  useIsDev.tsx  useIsDngConverterAvailable.ts
src/stores/: dialogs.store.ts  photos.store.ts
src/types/: ExtractedThumbnail.ts  File.ts  ImageInfo.ts
src/utils/: getDngArgs.ts  getFilename.ts  handleFieldChangeSave.ts
