[package]
name = "photo-importer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
chrono = "0.4"
tauri = { version = "1", features = [ "process-exit", "dialog-open", "protocol-all", "path-all", "fs-read-dir", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-system-info = "1"
walkdir = "2.3.2"
webbrowser = "1.0.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
xxhash-rust = {version = "0.8.11", features= ["xxh3", "const_xxh3"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
